Option to deploy via docker now...